QFSFileEngine: don't look through NTFS junctions

Starting in 1216161584b730576c24fb128131838be1826b37, we started
processing NTFS junctions as symbolic link.

This reverts isSymlink() behavior back to former behavior and processes
only symbolic junctions. The code path there worked just fine for
directory symbolic links but lead to multiple issues for volume mount
point junctions due to incompleteness.

Task-number: QTBUG-7036, QTBUG-7384

Merge-request: 493
Reviewed-by: João Abecasis <joao@trolltech.com>